refactor: user permisions